--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lakwa Hospital Obra – लकवा अस्पताल, ओबरा बिहार</title>
+  <title>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता</title>
 
-  <meta name="description" content="Lakwa Hospital Obra, NH-139 Obra Aurangabad, Bihar. लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बन्धित रोगों के लिए विशेष उपचार। ऑनलाइन अपॉइंटमेंट की सुविधा।" />
-  <meta name="keywords" content="Lakwa Hospital Obra, लकवा अस्पताल, Obra Hospital, Aurangabad Bihar, neuro treatment, paralysis treatment" />
+  <meta name="description" content="Lakwa Hospital Obra – लकवा एवं नसों से सम्बंधित रोगों के लिए विशेष उपचार, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष एवं 24×7 आपातकालीन सुविधा।" />
+  <meta name="keywords" content="Lakwa Hospital Obra, Lakwa Aspatal Obra, लकवा अस्पताल ओबरा, लकवा अस्पताल" />
 
   <link rel="stylesheet" href="style.css" />
-  <script defer src="main.js"></script>
 
-  <!-- SEO / Schema.org -->
+  <!-- Simple SEO Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Hospital",
+    "@type": "MedicalClinic",
     "name": "Lakwa Hospital Obra",
-    "description": "लकवा एवं नसों से सम्बन्धित रोगों के लिए विशेष अस्पताल।",
-    "telephone": "+919771737437",
+    "description": "लकवा एवं नसों से सम्बंधित रोगों के लिए विशेष अस्पताल",
+    "telephone": "+91 97717 37437",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139",
@@ -26,41 +25,35 @@
       "addressRegion": "Bihar",
       "postalCode": "824124",
       "addressCountry": "IN"
-    },
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": 24.8857249,
-      "longitude": 84.3652280
     }
   }
   </script>
 </head>
 <body>
 
-  <!-- 🔴 TOP EMERGENCY BAR -->
-  <div class="top-bar">
-    <div class="top-bar-inner">
-      <p class="top-bar-text">
-        <strong>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</strong>
-      </p>
-      <a href="tel:+919771737437" class="emergency-btn">
-        🚨 Emergency Call
-      </a>
-    </div>
+  <!-- TOP HOSPITAL LINE + EMERGENCY -->
+  <div class="top-info">
+    Lakwa Hospital Obra – <strong>लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</strong>
   </div>
 
-  <!-- HEADER / NAV -->
+  <div class="emergency-wrapper">
+    <a href="tel:+919771737437" class="emergency-btn">
+      🚨 EMERGENCY CALL
+    </a>
+  </div>
+
+  <!-- MAIN HEADER / NAVBAR -->
   <header class="site-header">
     <div class="logo-area">
       <div class="logo-circle">LH</div>
       <div class="logo-text">
-        <span class="logo-main">Lakwa Hospital</span>
-        <span class="logo-sub">Obra, Bihar</span>
+        <div class="logo-title">Lakwa Hospital</div>
+        <div class="logo-subtitle">Obra, Bihar</div>
       </div>
     </div>
 
-    <button class="nav-toggle" aria-label="Toggle navigation">
-      ☰
+    <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+      <span></span>
     </button>
 
     <nav class="main-nav">
@@ -76,140 +69,147 @@
   </header>
 
   <main>
-    <!-- HERO SECTION -->
-    <section class="hero">
-      <div class="hero-card">
-        <div class="hero-left">
-          <div class="doctor-photo-wrapper">
-            <img src="doctorphoto.png" alt="डॉ. चंदन कुमार" class="doctor-photo" />
-          </div>
+    <!-- HERO / DOCTOR SECTION -->
+    <section class="hero-card" id="home">
+      <div class="hero-inner">
+        <div class="hero-photo">
+          <img src="doctorphoto.png" alt="डॉ. चंदन कुमार, Lakwa Hospital Obra" />
         </div>
 
-        <div class="hero-right">
-          <h1 class="hospital-title">लकवा अस्पताल</h1>
-          <h2 class="doctor-name">डॉ. चंदन कुमार</h2>
+        <h1 class="hero-title">लकवा अस्पताल</h1>
+        <h2 class="hero-subtitle">डॉ. चंदन कुमार</h2>
 
-          <p class="hero-text">
-            M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
-            लकवा तथा नसों से सम्बन्धित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
-          </p>
+        <p class="hero-qual">
+          M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बंधित
+          रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
+        </p>
 
-          <ul class="hero-bullets">
-            <li>✔ विशेष लकवा उपचार</li>
-            <li>✔ अनुभवी डॉक्टर</li>
-            <li>✔ आपातकालीन सुविधाएँ 24×7</li>
-          </ul>
+        <p class="hero-text">
+          लकवा तथा नसों से सम्बंधित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा
+          वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
+        </p>
 
-          <div class="hero-actions">
-            <a href="tel:+919771737437" class="btn btn-primary">📞 अभी कॉल करें</a>
-            <a href="#contact" class="btn btn-outline">📅 ऑनलाइन अपॉइंटमेंट बुक करें</a>
-          </div>
-        </div>
-      </div>
+        <ul class="hero-points">
+          <li>विशेष लकवा उपचार</li>
+          <li>अनुभवी डॉक्टर</li>
+          <li>आपातकालीन सुविधाएँ 24×7</li>
+        </ul>
 
-      <!-- STATS -->
-      <div class="stats-row">
-        <div class="stat-card">
-          <div class="stat-icon">👨‍⚕️</div>
-          <div class="stat-value">10+</div>
-          <div class="stat-label">सालों का अनुभव</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-icon">✅</div>
-          <div class="stat-value">5000+</div>
-          <div class="stat-label">सफल उपचार</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-icon">⏰</div>
-          <div class="stat-value">24×7</div>
-          <div class="stat-label">आपातकालीन सेवा</div>
+        <div class="hero-actions">
+          <a href="tel:+919771737437" class="btn-primary">अभी कॉल करें</a>
+          <a href="#contact" class="btn-outline">ऑनलाइन अपॉइंटमेंट बुक करें</a>
         </div>
       </div>
     </section>
 
-    <!-- 🩺 SERVICES (TEXT LIST) -->
+    <!-- BLUE STATS -->
+    <section class="stats">
+      <div class="stat-card">
+        <div class="stat-icon">👨‍⚕️</div>
+        <div class="stat-number">10+</div>
+        <div class="stat-label">सालों का अनुभव</div>
+      </div>
+      <div class="stat-card">
+        <div class="stat-icon">✅</div>
+        <div class="stat-number">5000+</div>
+        <div class="stat-label">सफल उपचार</div>
+      </div>
+      <div class="stat-card">
+        <div class="stat-icon">⏰</div>
+        <div class="stat-number">24×7</div>
+        <div class="stat-label">आपातकालीन सेवा</div>
+      </div>
+    </section>
+
+    <!-- SERVICES TEXT -->
     <section class="card" id="services">
       <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
       <p class="section-text">
-        अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।
+        अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।
       </p>
 
-      <ul class="facility-list">
-        <li>BP Check (ब्लड प्रेशर जांच)</li>
-        <li>Pulse Check / Oximeter जांच</li>
-        <li>Sugar Check (ब्लड शुगर जांच)</li>
-        <li>Fever Check (बॉडी टेम्परेचर जांच)</li>
-        <li>Heart / ECG Monitoring</li>
-        <li>Ear / Nose / Throat (ENT) जांच</li>
-        <li>Nebulizer एवं श्वास सम्बन्धित उपचार</li>
-        <li>अन्य नियमित स्वास्थ्य जांच सुविधाएं</li>
+      <ul class="service-list">
+        <li>✔ BP Check (ब्लड प्रेशर जाँच)</li>
+        <li>✔ Pulse / SpO₂ Check (Pulse Oximeter)</li>
+        <li>✔ Sugar Check (रोज़ाना ब्लड शुगर जाँच)</li>
+        <li>✔ Fever Check (डिजिटल थर्मोमीटर जाँच)</li>
+        <li>✔ Heart / ECG Monitoring</li>
+        <li>✔ Ear / Nose / Throat (ENT) जाँच</li>
+        <li>✔ Nebulizer द्वारा श्वास संबंधित उपचार</li>
+        <li>✔ अन्य नियमित स्वास्थ्य जाँच सुविधाएं</li>
       </ul>
     </section>
 
-    <!-- 🔬 CHECKUP GRID – MACHINE PHOTOS -->
+    <!-- CHECKUP DEVICES SECTION -->
     <section class="card" id="checkup">
       <h2 class="section-title">जांच सुविधाएं / Checkup Services</h2>
       <p class="section-text">
-        हमारे यहाँ निम्न आधुनिक मशीनों द्वारा जाँच की सुविधाएं उपलब्ध हैं:
+        हमारे यहां निम्न आधुनिक मशीनों द्वारा जांच की सुविधाएं उपलब्ध हैं।
       </p>
 
       <div class="checkup-grid">
-        <div class="checkup-card check-bp">
-          <div class="checkup-icon"></div>
+        <div class="checkup-item">
+          <div class="checkup-img img-bp"></div>
           <h3>BP Check</h3>
-          <p>ऑटोमैटिक BP मशीन से सटीक ब्लड प्रेशर जांच।</p>
+          <p>ऑटोमैटिक BP मशीन से ब्लड प्रेशर की जांच।</p>
         </div>
-        <div class="checkup-card check-pulse">
-          <div class="checkup-icon"></div>
+
+        <div class="checkup-item">
+          <div class="checkup-img img-pulse"></div>
           <h3>Pulse / SpO₂ Check</h3>
-          <p>पल्स ऑक्सीमीटर से ऑक्सीजन एवं नाड़ी की जांच।</p>
+          <p>Pulse Oximeter से ऑक्सीजन एवं नाड़ी की जांच।</p>
         </div>
-        <div class="checkup-card check-thermo1">
-          <div class="checkup-icon"></div>
+
+        <div class="checkup-item">
+          <div class="checkup-img img-thermo"></div>
           <h3>Digital Thermometer</h3>
-          <p>बुखार की डिजिटल थर्मामीटर से जांच।</p>
+          <p>सटीक तापमान मापने के लिए डिजिटल थर्मोमीटर।</p>
         </div>
-        <div class="checkup-card check-sugar">
-          <div class="checkup-icon"></div>
+
+        <div class="checkup-item">
+          <div class="checkup-img img-sugar"></div>
           <h3>Sugar Check</h3>
           <p>ग्लूकोमीटर से ब्लड शुगर लेवल की जांच।</p>
         </div>
-        <div class="checkup-card check-ent">
-          <div class="checkup-icon"></div>
+
+        <div class="checkup-item">
+          <div class="checkup-img img-ent"></div>
           <h3>ENT जांच</h3>
-          <p>कान, नाक, गले की आधुनिक ENT मशीन से जांच।</p>
+          <p>कान, नाक एवं गले की ENT मशीन द्वारा जांच।</p>
         </div>
-        <div class="checkup-card check-thermo2">
-          <div class="checkup-icon"></div>
+
+        <div class="checkup-item">
+          <div class="checkup-img img-infrared"></div>
           <h3>Infrared Thermometer</h3>
-          <p>टच-लेस थर्मामीटर से तेज और सुरक्षित जांच।</p>
+          <p>टच-लेस थर्मोमीटर से तेज़ और सुरक्षित जांच।</p>
         </div>
-        <div class="checkup-card check-monitor">
-          <div class="checkup-icon"></div>
+
+        <div class="checkup-item">
+          <div class="checkup-img img-heart"></div>
           <h3>Heart / BP Monitor</h3>
-          <p>कंटीन्यू मॉनिटरिंग के लिए मल्टी-पैरामीटर मशीन।</p>
+          <p>कंटीन्यू मॉनिटरिंग के लिए कलाई-/हैंड-हेल्ड मॉनिटर।</p>
         </div>
-        <div class="checkup-card check-extra">
-          <div class="checkup-icon"></div>
+
+        <div class="checkup-item">
+          <div class="checkup-img img-other"></div>
           <h3>अन्य जांच</h3>
-          <p>रूटीन हेल्थ चेकअप एवं फॉलो-अप सुविधाएं।</p>
+          <p>जरूरत अनुसार अन्य जांच एवं सुविधाएं।</p>
         </div>
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section class="card" id="contact">
+    <!-- CONTACT / APPOINTMENT -->
+    <section class="card contact-card" id="contact">
       <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
 
-      <div class="contact-grid">
+      <div class="contact-layout">
         <div class="contact-info">
           <p class="section-text">
             पता: नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139, ओबरा, औरंगाबाद, बिहार – 824124
           </p>
           <p class="section-text">
-            मोबाइल: <a href="tel:+919771737437">+91 97717 37437</a>,
-            <a href="tel:+918210606911">+91 82106 06911</a><br />
-            कॉल या फ़ॉर्म भरने पर आपका कॉल वापस किया जाएगा।
+            मोबाइल: <a href="tel:+919771737437">+91 97717 37437</a>, <a href="tel:+918210609411">+91 82106 09411</a><br />
+            कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।
           </p>
         </div>
 
@@ -221,7 +221,7 @@
 
           <label>
             मोबाइल नंबर*
-            <input type="tel" name="phone" placeholder="10 अंकों का मोबाइल नंबर" required />
+            <input type="tel" name="phone" maxlength="10" placeholder="10 अंकों का मोबाइल नंबर" required />
           </label>
 
           <label>
@@ -234,12 +234,9 @@
             <textarea name="message" rows="3" placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
           </label>
 
-          <button type="submit" class="btn btn-primary full-width">
-            अपॉइंटमेंट भेजें
-          </button>
-
+          <button type="submit" class="btn-primary full-width">अपॉइंटमेंट भेजें</button>
           <p class="form-note">
-            फ़ॉर्म भरने के बाद आपका कॉल वापस किया जाएगा, और समय की पुष्टि की जाएगी।
+            फॉर्म भरने के बाद आपका कॉल जल्द वापस किया जाएगा, और समय की पुष्टि की जाएगी।
           </p>
         </form>
       </div>
@@ -249,15 +246,15 @@
     <section class="card" id="about">
       <h2 class="section-title">About Us – हमारा अस्पताल</h2>
       <p class="section-text">
-        हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि से सम्बन्धित विशेष उपचार प्रदान करता है।
-        डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों और अनुभवी टीम की देखरेख में उपचार किया जाता है, ताकि रोगियों को बेहतरीन और सुरक्षित सेवा प्राप्त हो सके।
+        हमारा अस्पताल लकवा (पैरेलिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि से
+        सम्बंधित विशेष उपचार प्रदान करता है। डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों और अनुभवी टीम की देखरेख में
+        उपचार किया जाता है, ताकि रोगियों को बेहतर और सुरक्षित सेवा प्राप्त हो सके।
       </p>
-
-      <ul class="facility-list">
-        <li>लकवा एवं नसों का विशेष उपचार</li>
-        <li>आधुनिक उपकरण एवं सुविधाएं</li>
-        <li>आपातकालीन सेवा 24×7</li>
-        <li>अनुभवी एवं सहयोगी स्टाफ</li>
+      <ul class="service-list">
+        <li>✔ लकवा एवं नसों का विशेष उपचार</li>
+        <li>✔ आधुनिक उपकरण एवं सुविधाएं</li>
+        <li>✔ आपातकालीन सेवा 24×7</li>
+        <li>✔ प्रशिक्षित एवं अनुभवी स्टाफ</li>
       </ul>
     </section>
 
@@ -265,8 +262,8 @@
     <section class="card" id="privacy">
       <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
       <p class="section-text">
-        इस वेबसाइट पर प्राप्त जानकारी केवल आपकी अपॉइंटमेंट सुविधा एवं स्वास्थ्य सम्बन्धी सलाह हेतु प्रयोग की जाती है। आपकी अनुमति के बिना आपकी व्यक्तिगत
-        जानकारी किसी तीसरे पक्ष के साथ साझा नहीं की जाएगी।
+        इस वेबसाइट पर प्राप्त जानकारी केवल आपकी अपॉइंटमेंट सुविधा एवं स्वास्थ्य सम्बन्धी सलाह हेतु प्रयोग की जाती है।
+        आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तीसरे पक्ष के साथ साझा नहीं की जाएगी।
       </p>
     </section>
 
@@ -274,7 +271,8 @@
     <section class="card" id="disclaimer">
       <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
       <p class="section-text">
-        इस वेबसाइट पर दी गई जानकारी सामान्य जागरूकता के उद्देश्य से है। किसी भी निदान या उपचार के लिए हमेशा डॉक्टर से प्रत्यक्ष परामर्श लें। वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार करना उचित नहीं है।
+        इस वेबसाइट पर दी गई जानकारी सामान्य जागरूकता के उद्देश्य से है। किसी भी निदान या उपचार के लिए हमेशा डॉक्टर से
+        प्रत्यक्ष परामर्श लें। वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार करना उचित नहीं है।
       </p>
     </section>
 
@@ -301,14 +299,16 @@
     <section class="card" id="location">
       <h2 class="section-title">हमारा स्थान (Google Map)</h2>
       <p class="section-text">
-        पता: नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139 ओबरा, औरंगाबाद बिहार – 824124
+        पता: नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139, ओबरा, औरंगाबाद, बिहार – 824124
       </p>
-
       <div class="map-wrapper">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3619.3592429845307!2d84.36522807537169!3d24.88572497791284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDUzJzA4LjYiTiA4NMKwMjInMDQuMSJF!5e0!3m2!1sen!2sin!4v1764600183480!5m2!1sen!2sin"
-          width="100%" height="350" style="border:0; border-radius:12px;"
-          allowfullscreen="" loading="lazy"
+          width="100%"
+          height="350"
+          style="border:0; border-radius:12px;"
+          allowfullscreen=""
+          loading="lazy"
           referrerpolicy="no-referrer-when-downgrade">
         </iframe>
       </div>
@@ -327,38 +327,22 @@
       © 2025 Lakwa Hospital, Obra Bihar<br />
       Designed &amp; Developed by Prince Kumar
     </p>
-<footer class="site-footer">
-  ...
-</footer>
+  </footer>
 
-<!-- mobile menu ke liye script -->
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const toggle = document.querySelector(".nav-toggle");
-    const nav = document.querySelector(".main-nav");
-    if (toggle && nav) {
-      toggle.addEventListener("click", () => {
-        nav.classList.toggle("nav-open");
-      });
-    }
-  });
-</script>
-<!-- mobile menu ke liye script -->
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const toggle = document.querySelector(".nav-toggle");
-    const nav = document.querySelector(".main-nav");
+  <!-- MOBILE NAV SCRIPT -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const toggle = document.querySelector(".nav-toggle");
+      const nav = document.querySelector(".main-nav");
 
-    if (toggle && nav) {
-      toggle.addEventListener("click", () => {
-        nav.classList.toggle("nav-open");            // class on/off
-        const expanded = toggle.getAttribute("aria-expanded") === "true";
-        toggle.setAttribute("aria-expanded", expanded ? "false" : "true");
-      });
-    }
-  });
-</script>
-</body>
-</html>
+      if (toggle && nav) {
+        toggle.addEventListener("click", () => {
+          nav.classList.toggle("nav-open");
+          const expanded = toggle.getAttribute("aria-expanded") === "true";
+          toggle.setAttribute("aria-expanded", expanded ? "false" : "true");
+        });
+      }
+    });
+  </script>
 </body>
 </html>
