--- a/index.html
+++ b/index.html
@@ -3,198 +3,188 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता</title>
+  <title>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</title>
 
-  <meta name="description" content="Lakwa Hospital Obra – लकवा एवं नसों से सम्बंधित रोगों के लिए विशेष उपचार, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष एवं 24×7 आपातकालीन सुविधा।" />
-  <meta name="keywords" content="Lakwa Hospital Obra, Lakwa Aspatal Obra, लकवा अस्पताल ओबरा, लकवा अस्पताल" />
+  <meta name="description"
+        content="Lakwa Hospital Obra - लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध। आपातकालीन सुविधाएँ 24x7।" />
 
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Simple SEO Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MedicalClinic",
-    "name": "Lakwa Hospital Obra",
-    "description": "लकवा एवं नसों से सम्बंधित रोगों के लिए विशेष अस्पताल",
-    "telephone": "+91 97717 37437",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139",
-      "addressLocality": "Obra",
-      "addressRegion": "Bihar",
-      "postalCode": "824124",
-      "addressCountry": "IN"
-    }
-  }
-  </script>
 </head>
 <body>
 
-  <!-- TOP HOSPITAL LINE + EMERGENCY -->
-  <div class="top-info">
-    Lakwa Hospital Obra – <strong>लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</strong>
+  <!-- TOP BAR TEXT -->
+  <div class="top-text">
+    <strong>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</strong>
   </div>
 
-  <div class="emergency-wrapper">
-    <a href="tel:+919771737437" class="emergency-btn">
+  <!-- EMERGENCY STRIP -->
+  <div class="emergency-strip">
+    <a class="emergency-btn" href="tel:+919771737437">
       🚨 EMERGENCY CALL
     </a>
   </div>
 
-  <!-- MAIN HEADER / NAVBAR -->
+  <!-- HEADER / NAVBAR -->
   <header class="site-header">
-    <div class="logo-area">
-      <div class="logo-circle">LH</div>
-      <div class="logo-text">
-        <div class="logo-title">Lakwa Hospital</div>
-        <div class="logo-subtitle">Obra, Bihar</div>
+    <div class="header-inner">
+      <div class="logo-area">
+        <div class="logo-circle">LH</div>
+        <div class="logo-text">
+          <div class="logo-title">Lakwa Hospital</div>
+          <div class="logo-sub">Obra, Bihar</div>
+        </div>
       </div>
+
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        <span></span>
+      </button>
+
+      <nav class="main-nav">
+        <ul>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#checkup">Checkup</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#privacy">Privacy Policy</a></li>
+          <li><a href="#disclaimer">Disclaimer</a></li>
+          <li><a href="#location">Location</a></li>
+        </ul>
+      </nav>
     </div>
-
-    <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
-      <span></span>
-    </button>
-
-    <nav class="main-nav">
-      <a href="#services">Services</a>
-      <a href="#checkup">Checkup</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact Us</a>
-      <a href="#about">About Us</a>
-      <a href="#privacy">Privacy Policy</a>
-      <a href="#disclaimer">Disclaimer</a>
-      <a href="#location">Location</a>
-    </nav>
   </header>
 
   <main>
-    <!-- HERO / DOCTOR SECTION -->
+
+    <!-- HERO SECTION -->
     <section class="hero-card" id="home">
       <div class="hero-inner">
-        <div class="hero-photo">
-          <img src="doctorphoto.png" alt="डॉ. चंदन कुमार, Lakwa Hospital Obra" />
+        <div class="hero-photo-wrap">
+          <div class="hero-photo">
+            <img src="doctorphoto.png" alt="डॉ. चंदन कुमार - Lakwa Hospital Obra" />
+          </div>
         </div>
 
-        <h1 class="hero-title">लकवा अस्पताल</h1>
-        <h2 class="hero-subtitle">डॉ. चंदन कुमार</h2>
+        <div class="hero-text">
+          <h1 class="hero-title">लकवा अस्पताल</h1>
+          <h2 class="hero-subtitle">डॉ. चंदन कुमार</h2>
 
-        <p class="hero-qual">
-          M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बंधित
-          रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
-        </p>
+          <p class="hero-description">
+            <strong>M.B.E.H (Patna)</strong> – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।<br />
+            लकवा तथा नसों से सम्बन्धित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुव्यवस्थित व्यवस्था।
+          </p>
 
-        <p class="hero-text">
-          लकवा तथा नसों से सम्बंधित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा
-          वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
-        </p>
+          <ul class="hero-points">
+            <li>✔ विशेष लकवा उपचार</li>
+            <li>✔ अनुभवी डॉक्टर</li>
+            <li>✔ आपातकालीन सुविधाएँ 24×7</li>
+          </ul>
 
-        <ul class="hero-points">
-          <li>विशेष लकवा उपचार</li>
-          <li>अनुभवी डॉक्टर</li>
-          <li>आपातकालीन सुविधाएँ 24×7</li>
-        </ul>
-
-        <div class="hero-actions">
-          <a href="tel:+919771737437" class="btn-primary">अभी कॉल करें</a>
-          <a href="#contact" class="btn-outline">ऑनलाइन अपॉइंटमेंट बुक करें</a>
+          <div class="hero-actions">
+            <a href="tel:+919771737437" class="btn btn-primary">अभी कॉल करें</a>
+            <a href="#contact" class="btn btn-outline">ऑनलाइन अपॉइंटमेंट बुक करें</a>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- BLUE STATS -->
-    <section class="stats">
+    <!-- STATS STRIP (BLUE BOXES) -->
+    <section class="stats" id="stats">
       <div class="stat-card">
         <div class="stat-icon">👨‍⚕️</div>
-        <div class="stat-number">10+</div>
+        <div class="stat-value">10+</div>
         <div class="stat-label">सालों का अनुभव</div>
       </div>
+
       <div class="stat-card">
         <div class="stat-icon">✅</div>
-        <div class="stat-number">5000+</div>
+        <div class="stat-value">5000+</div>
         <div class="stat-label">सफल उपचार</div>
       </div>
+
       <div class="stat-card">
-        <div class="stat-icon">⏰</div>
-        <div class="stat-number">24×7</div>
+        <div class="stat-icon">🕒</div>
+        <div class="stat-value">24×7</div>
         <div class="stat-label">आपातकालीन सेवा</div>
       </div>
     </section>
 
-    <!-- SERVICES TEXT -->
+    <!-- SERVICES -->
     <section class="card" id="services">
       <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
       <p class="section-text">
-        अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।
+        अत्याधुनिक सुविधाएँ, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।
       </p>
 
       <ul class="service-list">
         <li>✔ BP Check (ब्लड प्रेशर जाँच)</li>
-        <li>✔ Pulse / SpO₂ Check (Pulse Oximeter)</li>
-        <li>✔ Sugar Check (रोज़ाना ब्लड शुगर जाँच)</li>
-        <li>✔ Fever Check (डिजिटल थर्मोमीटर जाँच)</li>
+        <li>✔ Pulse Check / Oximeter जाँच</li>
+        <li>✔ Sugar Check (ब्लड शुगर जाँच)</li>
+        <li>✔ Fever Check (बॉडी टेम्परेचर जाँच)</li>
         <li>✔ Heart / ECG Monitoring</li>
         <li>✔ Ear / Nose / Throat (ENT) जाँच</li>
-        <li>✔ Nebulizer द्वारा श्वास संबंधित उपचार</li>
-        <li>✔ अन्य नियमित स्वास्थ्य जाँच सुविधाएं</li>
+        <li>✔ Nebulizer द्वारा श्वास सम्बन्धी उपचार</li>
+        <li>✔ अन्य नियमित स्वास्थ्य जाँच सुविधाएँ</li>
       </ul>
     </section>
 
-    <!-- CHECKUP DEVICES SECTION -->
+    <!-- CHECKUP DEVICES GRID -->
     <section class="card" id="checkup">
-      <h2 class="section-title">जांच सुविधाएं / Checkup Services</h2>
+      <h2 class="section-title">जांच सुविधाएँ / Checkup Services</h2>
       <p class="section-text">
-        हमारे यहां निम्न आधुनिक मशीनों द्वारा जांच की सुविधाएं उपलब्ध हैं।
+        हमारे यहाँ निम्न आधुनिक मशीनों द्वारा जाँच की सुविधाएँ उपलब्ध हैं।
       </p>
 
       <div class="checkup-grid">
-        <div class="checkup-item">
-          <div class="checkup-img img-bp"></div>
+
+        <div class="checkup-card">
+          <div class="checkup-img checkup-1"></div>
           <h3>BP Check</h3>
-          <p>ऑटोमैटिक BP मशीन से ब्लड प्रेशर की जांच।</p>
+          <p>ऑटोमैटिक BP मशीन से ब्लड प्रेशर जाँच।</p>
         </div>
 
-        <div class="checkup-item">
-          <div class="checkup-img img-pulse"></div>
+        <div class="checkup-card">
+          <div class="checkup-img checkup-2"></div>
           <h3>Pulse / SpO₂ Check</h3>
-          <p>Pulse Oximeter से ऑक्सीजन एवं नाड़ी की जांच।</p>
+          <p>फिंगर पल्स ऑक्सीमीटर से ऑक्सीजन एवं नाड़ी जाँच।</p>
         </div>
 
-        <div class="checkup-item">
-          <div class="checkup-img img-thermo"></div>
+        <div class="checkup-card">
+          <div class="checkup-img checkup-3"></div>
           <h3>Digital Thermometer</h3>
-          <p>सटीक तापमान मापने के लिए डिजिटल थर्मोमीटर।</p>
+          <p>डिजिटल थर्मामीटर से तेज़ एवं सही तापमान जाँच।</p>
         </div>
 
-        <div class="checkup-item">
-          <div class="checkup-img img-sugar"></div>
+        <div class="checkup-card">
+          <div class="checkup-img checkup-4"></div>
           <h3>Sugar Check</h3>
-          <p>ग्लूकोमीटर से ब्लड शुगर लेवल की जांच।</p>
+          <p>ग्लूकोमीटर से रक्त शुगर लेवल की जाँच।</p>
         </div>
 
-        <div class="checkup-item">
-          <div class="checkup-img img-ent"></div>
-          <h3>ENT जांच</h3>
-          <p>कान, नाक एवं गले की ENT मशीन द्वारा जांच।</p>
+        <div class="checkup-card">
+          <div class="checkup-img checkup-5"></div>
+          <h3>ENT जाँच</h3>
+          <p>कान, नाक, गले की आधुनिक ENT मशीन से जाँच।</p>
         </div>
 
-        <div class="checkup-item">
-          <div class="checkup-img img-infrared"></div>
+        <div class="checkup-card">
+          <div class="checkup-img checkup-6"></div>
           <h3>Infrared Thermometer</h3>
-          <p>टच-लेस थर्मोमीटर से तेज़ और सुरक्षित जांच।</p>
+          <p>टच-लेस इन्फ्रारेड सेफ एवं तेज़ तापमान जाँच।</p>
         </div>
 
-        <div class="checkup-item">
-          <div class="checkup-img img-heart"></div>
+        <div class="checkup-card">
+          <div class="checkup-img checkup-7"></div>
           <h3>Heart / BP Monitor</h3>
-          <p>कंटीन्यू मॉनिटरिंग के लिए कलाई-/हैंड-हेल्ड मॉनिटर।</p>
+          <p>कंटीन्यू मॉनिटरिंग के लिए पोर्टेबल मॉनिटर।</p>
         </div>
 
-        <div class="checkup-item">
-          <div class="checkup-img img-other"></div>
-          <h3>अन्य जांच</h3>
-          <p>जरूरत अनुसार अन्य जांच एवं सुविधाएं।</p>
+        <div class="checkup-card">
+          <div class="checkup-img checkup-8"></div>
+          <h3>अन्य जाँच</h3>
+          <p>रूटीन डेयरी बेस्ड अन्य फॉलो-अप जाँच।</p>
         </div>
+
       </div>
     </section>
 
@@ -202,13 +192,14 @@
     <section class="card contact-card" id="contact">
       <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
 
-      <div class="contact-layout">
+      <div class="contact-grid">
         <div class="contact-info">
           <p class="section-text">
             पता: नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139, ओबरा, औरंगाबाद, बिहार – 824124
           </p>
           <p class="section-text">
-            मोबाइल: <a href="tel:+919771737437">+91 97717 37437</a>, <a href="tel:+918210609411">+91 82106 09411</a><br />
+            मोबाइल: <a href="tel:+919771737437">+91 97717 37437</a>,
+            <a href="tel:+918210609411">+91 82106 09411</a><br />
             कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।
           </p>
         </div>
@@ -216,27 +207,30 @@
         <form class="contact-form">
           <label>
             रोगी का नाम*
-            <input type="text" name="name" placeholder="रोगी का नाम" required />
+            <input type="text" placeholder="रोगी का नाम" required />
           </label>
 
           <label>
             मोबाइल नंबर*
-            <input type="tel" name="phone" maxlength="10" placeholder="10 अंकों का मोबाइल नंबर" required />
+            <input type="tel" placeholder="10 अंकों का मोबाइल नंबर" required />
           </label>
 
           <label>
             पसंदीदा तिथि
-            <input type="date" name="date" />
+            <input type="date" />
           </label>
 
           <label>
             समस्या
-            <textarea name="message" rows="3" placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
+            <textarea rows="3" placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
           </label>
 
-          <button type="submit" class="btn-primary full-width">अपॉइंटमेंट भेजें</button>
-          <p class="form-note">
-            फॉर्म भरने के बाद आपका कॉल जल्द वापस किया जाएगा, और समय की पुष्टि की जाएगी।
+          <button type="submit" class="btn btn-primary full-width">
+            अपॉइंटमेंट भेजें
+          </button>
+
+          <p class="small-note">
+            फॉर्म भरने के बाद आपका कॉल वापस किया जाएगा, और समय की पुष्टि की जाएगी।
           </p>
         </form>
       </div>
@@ -246,19 +240,18 @@
     <section class="card" id="about">
       <h2 class="section-title">About Us – हमारा अस्पताल</h2>
       <p class="section-text">
-        हमारा अस्पताल लकवा (पैरेलिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि से
-        सम्बंधित विशेष उपचार प्रदान करता है। डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों और अनुभवी टीम की देखरेख में
-        उपचार किया जाता है, ताकि रोगियों को बेहतर और सुरक्षित सेवा प्राप्त हो सके।
+        हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमजोरी, दर्द आदि से सम्बन्धित विशेष उपचार प्रदान करता है।
+        डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों और अनुभवी टीम की देखरेख में उपचार किया जाता है, ताकि मरीजों को बेहतर और सुरक्षित सेवा प्राप्त हो सके।
       </p>
       <ul class="service-list">
         <li>✔ लकवा एवं नसों का विशेष उपचार</li>
-        <li>✔ आधुनिक उपकरण एवं सुविधाएं</li>
+        <li>✔ आधुनिक उपकरण एवं सुविधाएँ</li>
         <li>✔ आपातकालीन सेवा 24×7</li>
-        <li>✔ प्रशिक्षित एवं अनुभवी स्टाफ</li>
+        <li>✔ प्रतिष्ठित एवं अनुभवी स्टाफ</li>
       </ul>
     </section>
 
-    <!-- PRIVACY -->
+    <!-- PRIVACY POLICY -->
     <section class="card" id="privacy">
       <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
       <p class="section-text">
@@ -271,25 +264,29 @@
     <section class="card" id="disclaimer">
       <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
       <p class="section-text">
-        इस वेबसाइट पर दी गई जानकारी सामान्य जागरूकता के उद्देश्य से है। किसी भी निदान या उपचार के लिए हमेशा डॉक्टर से
-        प्रत्यक्ष परामर्श लें। वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार करना उचित नहीं है।
+        इस वेबसाइट पर दी गई जानकारी सामान्य जानकारी के उद्देश्य से है।
+        किसी भी निदान या उपचार के लिए हमेशा डॉक्टर से प्रत्यक्ष परामर्श लें।
+        वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार करना उचित नहीं है।
       </p>
     </section>
 
     <!-- GALLERY -->
     <section class="card gallery-card" id="gallery">
       <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
+
       <div class="gallery-grid">
         <div class="gallery-item">
           <img src="IMG_20251201_114256.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
           <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
         </div>
+
         <div class="gallery-item">
           <img src="IMG_20251201_114258.jpg" alt="दवाखाने की दुकान एवं स्टोर" />
           <div class="gallery-caption">दवाखाने की दुकान एवं स्टोर</div>
         </div>
+
         <div class="gallery-item">
-          <img src="IMG_20251201_114316.jpg" alt="अंदर का उपचार कक्ष" />
+          <img src="IMG_20251201_114319.jpg" alt="अंदर का उपचार कक्ष" />
           <div class="gallery-caption">अंदर का उपचार कक्ष</div>
         </div>
       </div>
@@ -301,18 +298,15 @@
       <p class="section-text">
         पता: नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139, ओबरा, औरंगाबाद, बिहार – 824124
       </p>
+
       <div class="map-wrapper">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3619.3592429845307!2d84.36522807537169!3d24.88572497791284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDUzJzA4LjYiTiA4NMKwMjInMDQuMSJF!5e0!3m2!1sen!2sin!4v1764600183480!5m2!1sen!2sin"
-          width="100%"
-          height="350"
-          style="border:0; border-radius:12px;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+          width="100%" height="350" style="border:0; border-radius:12px;" allowfullscreen=""
+          loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
+
   </main>
 
   <!-- FOOTER -->
@@ -338,8 +332,6 @@
       if (toggle && nav) {
         toggle.addEventListener("click", () => {
           nav.classList.toggle("nav-open");
-          const expanded = toggle.getAttribute("aria-expanded") === "true";
-          toggle.setAttribute("aria-expanded", expanded ? "false" : "true");
         });
       }
     });
